# ok2run

./: .gitignore  DESIGN.md  Dockerfile  Dockerfile.poller  LICENSE  README.md  README_CN.md  docker-compose.yml  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
examples/: claude-code-settings.json
scripts/: cc_permission_hook.py  e2e_demo.py  gmail_inbound.gs  gmail_poller.py  request_approval.py  start_services.sh  telegram_poller.py
src/agent_approval_gate/: auth.py  config.py  database.py  decision.py  i18n.py  main.py  models.py  schemas.py  service.py  simulate.py  utils.py
src/agent_approval_gate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_approval_gate/adapters/: __init__.py  email.py  telegram.py
tests/: conftest.py  test_api.py  test_email_adapter.py  test_email_utils.py  test_integration_simulate.py  test_parsing.py  test_rules.py
