[project]
name = "agent-approval-gate"
version = "0.1.0"
description = "Self-hosted agent approval gate with Telegram/Email workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "aiosmtpd>=1.4.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
